--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
                     </div>
                     <div>
                         <h3 class="text-4xl lg:text-5xl font-bold saudi-green m-2 font-bold">لماذا تختارنا؟</h3>
-                        <p class="text-slate-600">حلول سريعة وموثوقة لإتمام معاملاتك مع الجهات الحكومية بسهولة</p>
+                        <p class="text-slate-600">حلول سريعة وموثوقة لإتمام معاملاتك مع الخدمات العامة بسهولة</p>
                     </div>
                 </div>
             </div>
