fix(ui): update about section image and styling
- Change image source to about-logo.png from about-1.png
- Remove shadow and hover scale effect from image container
- Adjust container size classes from max-w-md/max-h-md to max-w-sm/max-h-sm
- Modify image classes to fixed width and height (w-50, h-50) without transform or hover effects
- Reduce image padding from p-5 to p-3

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 
                 <!-- Image -->
                     <div class="relative group" data-aos="fade-left" data-aos-delay="300">
-                    <div class="overflow-hidden rounded-3xl shadow-2xl max-w-md max-h-md mx-auto transition-all duration-500 group-hover:shadow-3xl group-hover:scale-105">
-                        <img src="./asstes/img/about-1.png" alt="عن الشركة"
-                        class="w-full h-full object-cover bg-saudi-green p-5  transform transition-transform duration-700 group-hover:scale-110" />
+                    <div class="overflow-hidden rounded-3xl max-w-sm max-h-sm mx-auto">
+                        <img src="./asstes/img/about-logo.png" alt="عن الشركة"
+                        class="w-50 h-50 object-cover bg-saudi-green p-3" />
                     </div>
                     </div>
 
