--- a/index.html
+++ b/index.html
@@ -307,10 +307,6 @@
                         class="w-50 h-50 object-cover bg-saudi-green p-3" />
                     </div>
                     </div>
-
-
-
-
             </div>
         </div>
 
@@ -690,59 +686,7 @@
                         </div>
                     </div>
 
-                    <!-- Card 7: خدمات وزارة الخارجية -->
-                    <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
-                        <div class="card-content">
-                            <!-- Image -->
-                            <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Ministry-of-Foreign-Affairs-01.png" alt="خدمات وزارة الخارجية"
-                                    class="w-full h-full object-contain">
-                            </div>
-
-                            <!-- Content -->
-                            <div class="card-text-content">
-                                <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات وزارة الخارجية</h3>
-
-                                <p class="text-gray-600 mb-4 leading-relaxed">
-                                    نقدم جميع خدمات وزارة الخارجية بخطوات منظمة وسريعة لتسهيل كافة معاملات الأفراد والمؤسسات
-                                    داخل المملكة وخارجها.
-                                </p>
-
-                                <p class="text-gray-500 text-sm mb-6 leading-relaxed">
-                                    من التفويضات الإلكترونية إلى إصدار التأشيرات المتنوعة، نحرص على تيسير جميع معاملاتك
-                                    بمرونة وكفاءة عالية.
-                                </p>
-
-                                <!-- Services List -->
-                                <ul class="card-services-list space-y-3">
-                                    <li class="bullet-point text-gray-700"> تفويض تأشيرات العمل للعمالة المنزلية الفردية
-                                        (سائق خاص - عامل منزلي - عاملة منزلية)</li>
-                                    <li class="bullet-point text-gray-700"> تفويض تاشيرات العمل للعمالة المهنية (مؤسسات -
-                                        شركات)</li>
-                                    <li class="bullet-point text-gray-700"> اصدار تاشيرات زيارة عائلية</li>
-                                    <li class="bullet-point text-gray-700">اصدار تأشيرات زيارة شخصية</li>
-                                </ul>
-
-                                <!-- Buttons -->
-                                <div class="card-buttons flex gap-4">
-                                    <a href="tel:0508298617">
-                                        <button
-                                            class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                                            <i class="fas fa-phone-alt"></i>
-                                            اتصل بنا
-                                        </button>
-                                    </a>
-                                    <a href="https://wa.me/966555952139">
-                                        <button
-                                            class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                                            <i class="fab fa-whatsapp"></i>
-                                            واتساب
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+          
 
                     <!-- Card 8: خدمات وزارة التجارة -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
@@ -1112,6 +1056,54 @@
                         </div>
                     </div>
 
+        <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
+                        <div class="card-content">
+                            <!-- Image -->
+                            <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
+                                <img src="./asstes/img/national.png" alt="خدمات منصة مدد" class="w-full h-full object-cover">
+                            </div>
+
+                            <!-- Content -->
+                            <div class="card-text-content">
+                                <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات العنوان الوطني</h3>
+
+                                <p class="text-gray-600 mb-4 leading-relaxed">
+                                    نقدم لك خدمات العنوان الوطني بطريقة سهلة وميسرة، مع ضمان إنجاز جميع الإجراءات
+                                    الرسمية بدقة واحترافية عالية.
+                                </p>
+
+                                <p class="text-gray-500 text-sm mb-6 leading-relaxed">
+                                    سواء كنت فرداً أو منشأة، نساعدك في إصدار وتعديل العنوان الوطني بأسرع وقت
+                                    وبأعلى مستويات الخدمة.
+                                </p>
+
+                                <!-- Services List -->
+                                <ul class="card-services-list space-y-3">
+                                    <li class="bullet-point text-gray-700"> اصدار العنوان الوطني للأفراد</li>
+                                    <li class="bullet-point text-gray-700"> اصدار العنوان الوطني للمنشئات</li>
+                                    <li class="bullet-point text-gray-700"> تعديل العنوان الوطني للأفراد</li>
+                                </ul>
+
+                                <!-- Buttons -->
+                                <div class="card-buttons flex gap-4">
+                                    <a href="tel:0508298617">
+                                        <button
+                                            class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                            <i class="fas fa-phone-alt"></i>
+                                            اتصل بنا
+                                        </button>
+                                    </a>
+                                    <a href="https://wa.me/966555952139">
+                                        <button
+                                            class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                            <i class="fab fa-whatsapp"></i>
+                                            واتساب
+                                        </button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                  
 
