--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <!-- Logo -->
                 <div class="flex items-center space-x-3 space-x-reverse">
                  <div
-                            class="w-12 h-12 bg-saudi-green  rounded-lg flex items-center justify-center rounded-full border-2 border-white border-black">
-                            <img src="./asstes/img/logo1.png" alt="">
+                            class="w-14 h-14 bg-saudi-green flex items-center justify-center">
+                            <img src="./asstes/img/white-logo.png" alt="">
                         </div>
                     <div>
                         <h1 class="text-xl font-bold text-white "> آفاق</h1>
