--- a/index.html
+++ b/index.html
@@ -301,12 +301,16 @@
                 </div>
 
                 <!-- Image -->
-                    <div class="relative group" data-aos="fade-left" data-aos-delay="300">
-                    <div class="overflow-hidden rounded-2xl max-w-sm max-h-sm mx-auto">
-                        <img src="./asstes/img/about-logo.png" alt="عن الشركة"
-                        class="w-50 h-50 object-cover bg-saudi-green p-3" />
-                    </div>
-                    </div>
+                   <div class="relative group" data-aos="fade-left" data-aos-delay="300">
+  <div class="overflow-hidden rounded-2xl max-w-sm max-h-sm mx-auto bg-white bg-saudi-green">
+    <div class="flex items-center justify-center w-full h-full">
+      <img src="./asstes/img/about-logo.png" 
+           alt="عن الشركة"
+           class="w-25 h-25 object-contain bg-saudi-green p-3 rounded-full" />
+    </div>
+  </div>
+</div>
+
             </div>
         </div>
 
@@ -2495,7 +2499,7 @@
             <div class="border-t border-white border-opacity-20 pt-8">
                 <div class="text-center">
                     <p class="opacity-90" dir="ltr">
-                        © 2025 جميع الحقوق محفوظة لشركة منصة آفاق للخدمات العامة - المملكة العربية السعودية
+                        © 2025 جميع الحقوق محفوظة  مؤسسة آفاق للخدمات العامة - المملكة العربية السعودية
                     </p>
                 </div>
             </div>
