feat(ui): add Najiz services card with contact options
- Added a new card component for Najiz electronic services
- Included service descriptions and key features in Arabic
- Listed specific services such as legal cases filing and document authentication
- Added contact buttons for phone call and WhatsApp with icons and hover effects
- Styled the card with rounded corners, shadow, and responsive layout elements

--- a/index.html
+++ b/index.html
@@ -421,6 +421,54 @@
                             </div>
                         </div>
                     </div>
+<!-- Card 1: خدمات ناجز -->
+<div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
+    <div class="card-content">
+        <!-- Image -->
+        <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
+            <img src="./asstes/img/Najiz.png" alt="خدمات ناجز" class="w-full h-full object-cover">
+        </div>
+
+        <!-- Content -->
+        <div class="card-text-content">
+            <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات ناجز</h3>
+
+            <p class="text-gray-600 mb-4 leading-relaxed">
+                نقدم لك جميع خدمات ناجز الإلكترونية بكل سهولة وسرعة مع متابعة دقيقة حتى إتمام الطلب.
+            </p>
+
+            <p class="text-gray-500 text-sm mb-6 leading-relaxed">
+                نوفر لك الدعم الكامل لإنجاز معاملاتك القضائية والعدلية إلكترونياً باحترافية عالية.
+            </p>
+
+            <!-- Services List -->
+            <ul class="space-y-3 mb-8">
+                <li class="bullet-point text-gray-700"> رفع الدعاوى القضائية</li>
+                <li class="bullet-point text-gray-700"> رفع تنفيذ الأحكام القضائية</li>
+                <li class="bullet-point text-gray-700"> توثيق صك الحضانة</li>
+                <li class="bullet-point text-gray-700"> توثيق صك الطلاق</li>
+                <li class="bullet-point text-gray-700"> توثيق عقد الزواج</li>
+            </ul>
+
+            <!-- Buttons -->
+            <div class="card-buttons flex gap-3">
+                <!-- زر الاتصال -->
+                <a href="tel:+0508298617"
+                    class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                    <i class="fas fa-phone-alt"></i>
+                    اتصل بنا
+                </a>
+
+                <!-- زر واتساب -->
+                <a href="https://wa.me/966555952139" target="_blank"
+                    class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                    <i class="fab fa-whatsapp"></i>
+                    واتساب
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
                     <!-- Card 2: خدمات مكتب العمل -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
