--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
 
                 <!-- Image -->
                    <div class="relative group" data-aos="fade-left" data-aos-delay="300">
-  <div class="overflow-hidden rounded-2xl max-w-sm max-h-sm mx-auto bg-white bg-saudi-green">
-    <div class="flex items-center justify-center w-full h-full">
-      <img src="./asstes/img/about-logo.png" 
+  <div class="overflow-hidden rounded-2xl max-w-sm max-h-sm mx-auto bg-white ">
+    <div class="flex items-center justify-center">
+      <img src="./asstes/img/white.jpg" 
            alt="عن الشركة"
-           class="w-25 h-25 object-contain bg-saudi-green p-3 rounded-full" />
+           class="w-22 h-22 object-contain p-3 rounded-full" />
     </div>
   </div>
 </div>
@@ -401,9 +401,6 @@
                                 <li class="bullet-point text-gray-700"> تجديد رخصة بلدية تجارية</li>
                                 <li class="bullet-point text-gray-700"> تعديل رخصة بلدية تجارية</li>
                                 <li class="bullet-point text-gray-700"> إلغاء او إيقاف رخصة بلدية تجارية</li>
-                                <li class="bullet-point text-gray-700"> اصدار شهادة الدفاع المدني </li>
-                                <li class="bullet-point text-gray-700"> اصدار جميع تصاريح السلامة </li>
-                                <li class="bullet-point text-gray-700"> اصدار شهادة تركيب الكاميرات من الشرطة </li>
                             </ul>
 
                             <!-- Buttons -->
@@ -2205,7 +2202,7 @@
                             </div>
                             <p class="text-gray-700 leading-relaxed">
 موظفين تستحق الاحترام والتقدير تعاملاتهم مع الاخرين بكل ود واحترام
-انجاز المعامله في اسرع وقت شكرا بصمة افاق
+انجاز المعامله في اسرع وقت شكرا بصمة آفاق
                      <div class="flex items-center justify-between mt-4 pt-4 border-t border-gray-100">
                                 <span class="text-sm text-gray-500">
                                     <i class="fas fa-map-marker-alt text-saudi-green ml-1"></i>
@@ -2449,8 +2446,8 @@
                 <div>
                     <div class="flex items-center space-x-3 space-x-reverse mb-6">
                         <div
-                            class="w-12 h-12 bg-saudi-green  rounded-lg flex items-center justify-center rounded-full border-2 border-white border-black">
-                            <img src="./asstes/img/logo1.png" alt="">
+                            class="w-12 h-12 rounded-lg flex items-center justify-center">
+                            <img src="./asstes/img/white-logo.png" alt="">
                         </div>
                         <div>
                             <h3 class="text-xl font-bold"> آفاق</h3>
@@ -2458,7 +2455,7 @@
                         </div>
                     </div>
                     <p class="opacity-90 leading-relaxed mb-6">
-                        افاق متخصصة في تقديم الخدمات العامة بأعلى معايير الجودة والمهنية في المملكة العربية السعودية
+                        مؤسسة مكتب آفاق متخصصة في تقديم الخدمات العامة بأعلى معايير الجودة والمهنية في المملكة العربية السعودية
                     </p>
                     <!-- Social Media -->
                     <div class="flex space-x-4 space-x-reverse">
@@ -2547,7 +2544,7 @@
             <div class="border-t border-white border-opacity-20 pt-8">
                 <div class="text-center">
                     <p class="opacity-90" dir="ltr">
-                        © 2025 جميع الحقوق محفوظة  مؤسسة آفاق للخدمات العامة - المملكة العربية السعودية
+                        © 2025 جميع الحقوق محفوظة  مؤسسة مكتب آفاق للخدمات العامة - المملكة العربية السعودية
                     </p>
                 </div>
             </div>
