feat(ui): update municipality and civil defense services sections
- Add "Transfer ownership of commercial municipal license" to municipality services list
- Refactor the "Najiz Services" card HTML for better structure and indentation
- Replace the "Insurance Services" card with a new "Civil Defense Services" card
- Update civil defense services list with relevant offerings
- Adjust contact buttons layout and styles in updated cards for consistency

--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
                                 <li class="bullet-point text-gray-700"> اصدار رخصة بلدية تجارية</li>
                                 <li class="bullet-point text-gray-700"> تجديد رخصة بلدية تجارية</li>
                                 <li class="bullet-point text-gray-700"> تعديل رخصة بلدية تجارية</li>
+                                <li class="bullet-point text-gray-700">  نقل ملكية رخصة البلدية التجارية</li>
                                 <li class="bullet-point text-gray-700"> إلغاء او إيقاف رخصة بلدية تجارية</li>
                             </ul>
 
@@ -422,54 +423,55 @@
                             </div>
                         </div>
                     </div>
-<!-- Card 1: خدمات ناجز -->
-<div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
-    <div class="card-content">
-        <!-- Image -->
-        <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/Najiz.png" alt="خدمات ناجز" class="w-full h-full object-cover">
-        </div>
 
-        <!-- Content -->
-        <div class="card-text-content">
-            <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات ناجز</h3>
+                    <!-- Card 1: خدمات ناجز -->
+                    <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
+                        <div class="card-content">
+                            <!-- Image -->
+                            <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
+                                <img src="./asstes/img/Najiz.png" alt="خدمات ناجز" class="w-full h-full object-cover">
+                            </div>
 
-            <p class="text-gray-600 mb-4 leading-relaxed">
-                نقدم لك جميع خدمات ناجز الإلكترونية بكل سهولة وسرعة مع متابعة دقيقة حتى إتمام الطلب.
-            </p>
+                            <!-- Content -->
+                            <div class="card-text-content">
+                                <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات ناجز</h3>
 
-            <p class="text-gray-500 text-sm mb-6 leading-relaxed">
-                نوفر لك الدعم الكامل لإنجاز معاملاتك القضائية والعدلية إلكترونياً باحترافية عالية.
-            </p>
+                                <p class="text-gray-600 mb-4 leading-relaxed">
+                                    نقدم لك جميع خدمات ناجز الإلكترونية بكل سهولة وسرعة مع متابعة دقيقة حتى إتمام الطلب.
+                                </p>
 
-            <!-- Services List -->
-            <ul class="space-y-3 mb-8">
-                <li class="bullet-point text-gray-700"> رفع الدعاوى القضائية</li>
-                <li class="bullet-point text-gray-700"> رفع تنفيذ الأحكام القضائية</li>
-                <li class="bullet-point text-gray-700"> توثيق صك الحضانة</li>
-                <li class="bullet-point text-gray-700"> توثيق صك الطلاق</li>
-                <li class="bullet-point text-gray-700"> توثيق عقد الزواج</li>
-            </ul>
+                                <p class="text-gray-500 text-sm mb-6 leading-relaxed">
+                                    نوفر لك الدعم الكامل لإنجاز معاملاتك القضائية والعدلية إلكترونياً باحترافية عالية.
+                                </p>
 
-            <!-- Buttons -->
-            <div class="card-buttons flex gap-3">
-                <!-- زر الاتصال -->
-                <a href="tel:+0508298617"
-                    class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                    <i class="fas fa-phone-alt"></i>
-                    اتصل بنا
-                </a>
+                                <!-- Services List -->
+                                <ul class="space-y-3 mb-8">
+                                    <li class="bullet-point text-gray-700"> رفع الدعاوى القضائية</li>
+                                    <li class="bullet-point text-gray-700"> رفع تنفيذ الأحكام القضائية</li>
+                                    <li class="bullet-point text-gray-700"> توثيق صك الحضانة</li>
+                                    <li class="bullet-point text-gray-700"> توثيق صك الطلاق</li>
+                                    <li class="bullet-point text-gray-700"> توثيق عقد الزواج</li>
+                                </ul>
 
-                <!-- زر واتساب -->
-                <a href="https://wa.me/966555952139" target="_blank"
-                    class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                    <i class="fab fa-whatsapp"></i>
-                    واتساب
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
+                                <!-- Buttons -->
+                                <div class="card-buttons flex gap-3">
+                                    <!-- زر الاتصال -->
+                                    <a href="tel:+0508298617"
+                                        class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                        <i class="fas fa-phone-alt"></i>
+                                        اتصل بنا
+                                    </a>
+
+                                    <!-- زر واتساب -->
+                                    <a href="https://wa.me/966555952139" target="_blank"
+                                        class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                        <i class="fab fa-whatsapp"></i>
+                                        واتساب
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Card 2: خدمات مكتب العمل -->
                     <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
@@ -682,58 +684,56 @@
                         </div>
                     </div>
 
-                    <!-- Card 6: الخدمات الإلكترونية -->
-                    <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
-                        <div class="card-content">
-                            <!-- Image -->
-                            <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/insurance.png" alt="خدمات التأمين"
-                                    class="w-full h-full object-cover">
-                            </div>
+                   <!-- Card 6: خدمات الدفاع المدني -->
+<div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
+    <div class="card-content">
+        <!-- Image -->
+        <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
+            <img src="./asstes/img/civic.jpg" alt="خدمات الدفاع المدني"
+                class="w-full h-full object-cover">
+        </div>
 
-                            <!-- Content -->
-                            <div class="card-text-content">
-                                <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات التأمين</h3>
+        <!-- Content -->
+        <div class="card-text-content">
+            <h3 class="text-2xl font-bold text-gray-800 mb-4">خدمات الدفاع المدني</h3>
 
-                                <p class="text-gray-600 mb-4 leading-relaxed">
-                                    نقدم لك مجموعة شاملة من خدمات التأمين المختلفة التي تضمن حمايتك وراحة بالك في جميع
-                                    جوانب الحياة بأفضل الأسعار وأعلى مستويات التغطية.
-                                </p>
+            <p class="text-gray-600 mb-4 leading-relaxed">
+                نقدم لك خدمات الدفاع المدني باحترافية عالية لضمان التزام منشأتك بجميع معايير السلامة والأمان.
+            </p>
 
-                                <p class="text-gray-500 text-sm mb-6 leading-relaxed">
-                                    نوفر لك حلول تأمينية متكاملة تشمل التأمين الطبي وتأمين المركبات وجميع الخدمات
-                                    المطلوبة لإصدار وتجديد الإقامات بكل سهولة واحترافية.
-                                </p>
+            <p class="text-gray-500 text-sm mb-6 leading-relaxed">
+                نسهل عليك جميع الإجراءات للحصول على التصاريح والشهادات المطلوبة بأعلى سرعة وكفاءة.
+            </p>
 
-                                <!-- Services List -->
-                                <ul class="card-services-list space-y-3">
-                                    <li class="bullet-point text-gray-700">تأمين طبي</li>
-                                    <li class="bullet-point text-gray-700">تأمين اصدار اقامة</li>
-                                    <li class="bullet-point text-gray-700">فحص طبي اصدار اقامة</li>
-                                    <li class="bullet-point text-gray-700">تأمين المركبات</li>
-                                    <li class="bullet-point text-gray-700">تأمين نقل ملكية المركبات</li>
-                                </ul>
+            <!-- Services List -->
+            <ul class="card-services-list space-y-3">
+                <li class="bullet-point text-gray-700">اصدار رخصة الدفاع المدني</li>
+                <li class="bullet-point text-gray-700">اصدار جميع تصاريح السلامة</li>
+                <li class="bullet-point text-gray-700">اصدار شهادة تركيب أدوات الوقاية والحماية من الحريق</li>
+                <li class="bullet-point text-gray-700">اصدار التقرير الفني</li>
+                <li class="bullet-point text-gray-700">اصدار شهادة الإنجاز من الشرطة لتركيب الكاميرات</li>
+            </ul>
 
-                                <!-- Buttons -->
-                                <div class="card-buttons flex gap-4">
-                                    <a href="tel:0508298617">
-                                        <button
-                                            class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                                            <i class="fas fa-phone-alt"></i>
-                                            اتصل بنا
-                                        </button>
-                                    </a>
-                                    <a href="https://wa.me/966555952139">
-                                        <button
-                                            class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
-                                            <i class="fab fa-whatsapp"></i>
-                                            واتساب
-                                        </button>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <!-- Buttons -->
+            <div class="card-buttons flex gap-4">
+                <a href="tel:0508298617">
+                    <button
+                        class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                        <i class="fas fa-phone-alt"></i>
+                        اتصل بنا
+                    </button>
+                </a>
+                <a href="https://wa.me/966555952139">
+                    <button
+                        class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                        <i class="fab fa-whatsapp"></i>
+                        واتساب
+                    </button>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 
           
 
