--- a/index.html
+++ b/index.html
@@ -438,7 +438,9 @@
     <div class="flex items-center justify-center">
       <img src="./asstes/img/white.jpg" 
            alt="عن الشركة"
-           class="w-22 h-22 object-contain p-3 " />
+
+           class="w-20  h-20 object-contain bg-saudi-green p-3 rounded-full" />
+
     </div>
   </div>
 </div>
