fix(ui): swap and restyle social media icons for X and TikTok
- Replace the Twitter icon link with a styled TikTok icon and link
- Replace the TikTok icon link with a styled X icon using inline SVG
- Update icon container classes for consistent size, color, and hover effects
- Add target="_blank" attribute to open social media links in new tabs
- Improve visual design with background and text color transitions on hover

--- a/index.html
+++ b/index.html
@@ -2639,15 +2639,18 @@
                     </p>
                     <!-- Social Media -->
                     <div class="flex space-x-4 space-x-reverse">
-                        <a href="https://x.com/afaq_2030_?t=uOKwnekVXS_jIEurxLb4lw&s=09"
-                            class="w-10 h-10 bg-blue-400 p-5 rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
-                            <i class="fab fa-twitter text-white"></i>
+                        <!-- X (Twitter) -->
+                        <a href="https://www.tiktok.com/@basmat.afaq?_t=ZS-8zRT2jxTRUl&_r=1" 
+                           target="_blank"
+                           class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center text-white hover:text-gold hover:bg-white/20 transition-all duration-300">
+                         <i class="fab fa-tiktok text-lg bg-black p-2 rounded-full"></i>
                         </a>
 
-
-                        <a href="https://www.tiktok.com/@basmat.afaq?_t=ZS-8zRT2jxTRUl&_r=1"
-                            class="w-10 h-10 bg-black rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
-                            <i class="fab fa-tiktok text-white"></i>
+                        <!-- TikTok -->
+                        <a href="https://x.com/afaq_2030_?t=uOKwnekVXS_jIEurxLb4lw&s=09" 
+                           target="_blank"
+                           class="w-12 h-12 bg-white/10 rounded-full flex items-center justify-center text-white hover:text-gold hover:bg-white/20 transition-all duration-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 640 640" class="w-9 h-9 bg-black rounded-full p-2"><path d="M453.2 112L523.8 112L369.6 288.2L551 528L409 528L297.7 382.6L170.5 528L99.8 528L264.7 339.5L90.8 112L236.4 112L336.9 244.9L453.2 112zM428.4 485.8L467.5 485.8L215.1 152L173.1 152L428.4 485.8z" /></svg>
                         </a>
                     </div>
                 </div>
