fix(home): update hero section padding and contact email
- Removed right padding from hero section for layout adjustment
- Changed contact email from afaq0012@gmail.com to info@basmatafaq.com

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
    
 <!-- Hero Section -->
 
-<section id="home" class="hero-pattern min-h-screen flex items-center justify-center pt-20 pr-5 relative overflow-hidden" style="background-color: #00544d;">
+<section id="home" class="hero-pattern min-h-screen flex items-center justify-center pt-20   relative overflow-hidden" style="background-color: #00544d;">
     <!-- Background Decorative Elements -->
 
 
@@ -2696,7 +2696,7 @@
                         </div>
                         <div class="flex items-center space-x-3 space-x-reverse">
                             <i class="fas fa-envelope text-gold"></i>
-                            <span class="opacity-90" dir="ltr">afaq0012@gmail.com</span>
+                            <span class="opacity-90" dir="ltr">info@basmatafaq.com</span>
                         </div>
                         <div class="flex items-start space-x-3 space-x-reverse">
                             <i class="fas fa-map-marker-alt text-gold mt-1"></i>
