--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       <img src="./asstes/img/white.jpg" 
            alt="عن الشركة"
 
-           class="w-20  h-20 object-contain bg-saudi-green p-3 rounded-full" />
+           class="w-30  h-30 object-contain bg-saudi-green p-3 " />
 
     </div>
   </div>
