add img in services section

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/insurance.png" alt="خدمات التأمين" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
+            <img src="./asstes/img/a-guarantee.png" alt="خدمات التأمين" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
         </div>
 
         <!-- Content -->
@@ -1239,7 +1239,7 @@
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
                                 <img src="./asstes/img/Citizen Account.png" alt="حساب المواطن"
-                                    class="w-full h-full object-contain">
+                                    class="w-full h-full object-cover">
                             </div>
 
                             <!-- Content -->
