--- a/index-ar.html
+++ b/index-ar.html
@@ -608,7 +608,7 @@
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/insurance.png" alt="خدمات التأمين" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
+            <img src="./asstes/img/a-guarantee.png" alt="خدمات التأمين" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
         </div>
 
         <!-- Content -->
@@ -657,7 +657,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Najiz.png" alt="خدمات ناجز" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
+                                <img src="./asstes/img/Najiz-1.png" alt="خدمات ناجز" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
                             </div>
 
                             <!-- Content -->
@@ -970,7 +970,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="خدمات وزارة التجارة"
+                                <img src="./asstes/img/Ministry-of-Commerce-1.png" alt="خدمات وزارة التجارة"
                                     class="w-full h-full object-cover">
                             </div>
 
@@ -1289,7 +1289,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/human-resource1.png" alt="الضمان الاجتماعي المطور"
+                                <img src="./asstes/img/social-security-1.png" alt="الضمان الاجتماعي المطور"
                                     class="w-full h-full object-contain">
                             </div>
 
@@ -1666,7 +1666,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="وزارة التجارة"
+                        <img src="./asstes/img/Ministry-of-Commerce.png" alt="وزارة التجارة"
                             class="partner-super-logo">
 
                     </div>
@@ -1686,7 +1686,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/General Directorate of Passports.png" alt="الجوازات"
+                        <img src="./asstes/img/General Directorate of Passports-1.png" alt="الجوازات"
                             class="partner-super-logo">
 
                     </div>
@@ -1696,7 +1696,7 @@
                    <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/human-resource.png" alt="التنمية الاجتماعية"
+                        <img src="./asstes/img/GOSI-2.png" alt="التنمية الاجتماعية"
                             class="partner-super-logo">
 
                     </div>
@@ -1715,7 +1715,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Musaned- 01.png" alt="مساند" class="partner-super-logo">
+                        <img src="./asstes/img/Musaned- 011.png" alt="مساند" class="partner-super-logo">
 
                     </div>
 
@@ -1733,7 +1733,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="الزكاة والضريبة"
+                        <img src="./asstes/img/zakat-rax-and-customs-authority-1.png" alt="الزكاة والضريبة"
                             class="partner-super-logo">
 
                     </div>
@@ -1743,7 +1743,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Mudad.png" alt="مدد" class="partner-super-logo">
+                        <img src="./asstes/img/Mudad-1.png" alt="مدد" class="partner-super-logo">
 
                     </div>
 
@@ -1752,7 +1752,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/QIWA-01.png" alt="قوى" class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="قوى" class="partner-super-logo">
 
                     </div>
 
@@ -1760,7 +1760,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="وزارة التجارة"
+                        <img src="./asstes/img/Ministry-of-Commerce.png" alt="وزارة التجارة"
                             class="partner-super-logo">
 
                     </div>
@@ -1801,7 +1801,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/GOSI-02.png" alt="GOSI " class="partner-super-logo">
+                        <img src="./asstes/img/GOSI-2.png" alt="GOSI " class="partner-super-logo">
 
                     </div>
 
@@ -1835,7 +1835,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/General Directorate of Passports.png" alt="الجوازات"
+                        <img src="./asstes/img/General Directorate of Passports-1.png" alt="الجوازات"
                             class="partner-super-logo">
 
                     </div>
@@ -1845,7 +1845,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/human-resource.png" alt="التنمية الاجتماعية"
+                        <img src="./asstes/img/GOSI-2.png" alt="التنمية الاجتماعية"
                             class="partner-super-logo">
 
                     </div>
@@ -1864,7 +1864,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Musaned- 01.png" alt="مساند" class="partner-super-logo">
+                        <img src="./asstes/img/Musaned- 011.png" alt="مساند" class="partner-super-logo">
 
                     </div>
 
@@ -1882,7 +1882,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="الزكاة والضريبة"
+                        <img src="./asstes/img/zakat-rax-and-customs-authority-1.png" alt="الزكاة والضريبة"
                             class="partner-super-logo">
 
                     </div>
@@ -1892,7 +1892,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Mudad.png" alt="مدد" class="partner-super-logo">
+                        <img src="./asstes/img/Mudad-1.png" alt="مدد" class="partner-super-logo">
 
                     </div>
 
@@ -1901,7 +1901,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/QIWA-01.png" alt="قوى" class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="قوى" class="partner-super-logo">
 
                     </div>
 
@@ -1929,7 +1929,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/GOSI-02.png" alt="GOSI " class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="GOSI " class="partner-super-logo">
 
                     </div>
 
