--- a/index-en.html
+++ b/index-en.html
@@ -784,7 +784,7 @@
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/insurance.png" alt="Insurance Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
+            <img src="./asstes/img/a-guarantee.png" alt="Insurance Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/insurance">
         </div>
 
         <!-- Content -->
@@ -833,7 +833,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Najiz.png" alt="Najiz Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
+                                <img src="./asstes/img/Najiz-1.png" alt="Najiz Services" class="w-full h-full object-cover" data-localized-img="./asstes/img/Najiz">
                             </div>
 
                             <!-- Content -->
@@ -1136,7 +1136,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="Ministry of Commerce Services"
+                                <img src="./asstes/img/Ministry-of-Commerce-1.png" alt="Ministry of Commerce Services"
                                     class="w-full h-full object-cover">
                             </div>
 
@@ -1442,7 +1442,7 @@
                         <div class="card-content">
                             <!-- Image -->
                             <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-                                <img src="./asstes/img/human-resource1.png" alt="Developed Social Security"
+                                <img src="./asstes/img/social-security-1.png" alt="Developed Social Security"
                                     class="w-full h-full object-contain">
                             </div>
 
@@ -1817,7 +1817,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="Ministry of Commerce"
+                        <img src="./asstes/img/Ministry-of-Commerce.png" alt="Ministry of Commerce"
                             class="partner-super-logo">
 
                     </div>
@@ -1837,7 +1837,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/General Directorate of Passports.png" alt="Passports"
+                        <img src="./asstes/img/General Directorate of Passports-1.png" alt="Passports"
                             class="partner-super-logo">
 
                     </div>
@@ -1847,7 +1847,7 @@
                    <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/human-resource.png" alt="Social Development"
+                        <img src="./asstes/img/GOSI-2.png" alt="Social Development"
                             class="partner-super-logo">
 
                     </div>
@@ -1866,7 +1866,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Musaned- 01.png" alt="Musaned" class="partner-super-logo">
+                        <img src="./asstes/img/Musaned- 011.png" alt="Musaned" class="partner-super-logo">
 
                     </div>
 
@@ -1884,7 +1884,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="Zakat and Tax"
+                        <img src="./asstes/img/zakat-rax-and-customs-authority-1.png" alt="Zakat and Tax"
                             class="partner-super-logo">
 
                     </div>
@@ -1894,7 +1894,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Mudad.png" alt="Mudad" class="partner-super-logo">
+                        <img src="./asstes/img/Mudad-1.png" alt="Mudad" class="partner-super-logo">
 
                     </div>
 
@@ -1903,7 +1903,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/QIWA-01.png" alt="Qiwa" class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="Qiwa" class="partner-super-logo">
 
                     </div>
 
@@ -1911,7 +1911,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="Ministry of Commerce"
+                        <img src="./asstes/img/Ministry-of-Commerce.png" alt="Ministry of Commerce"
                             class="partner-super-logo">
 
                     </div>
@@ -1952,7 +1952,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/GOSI-02.png" alt="GOSI" class="partner-super-logo">
+                        <img src="./asstes/img/GOSI-2.png" alt="GOSI" class="partner-super-logo">
 
                     </div>
 
@@ -1986,7 +1986,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/General Directorate of Passports.png" alt="Passports"
+                        <img src="./asstes/img/General Directorate of Passports-1.png" alt="Passports"
                             class="partner-super-logo">
 
                     </div>
@@ -1996,7 +1996,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/human-resource.png" alt="Social Development"
+                        <img src="./asstes/img/GOSI-2.png" alt="Social Development"
                             class="partner-super-logo">
 
                     </div>
@@ -2015,7 +2015,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Musaned- 01.png" alt="Musaned" class="partner-super-logo">
+                        <img src="./asstes/img/Musaned- 011.png" alt="Musaned" class="partner-super-logo">
 
                     </div>
 
@@ -2033,7 +2033,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="Zakat and Tax"
+                        <img src="./asstes/img/zakat-rax-and-customs-authority-1.png" alt="Zakat and Tax"
                             class="partner-super-logo">
 
                     </div>
@@ -2043,7 +2043,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Mudad.png" alt="Mudad" class="partner-super-logo">
+                        <img src="./asstes/img/Mudad-1.png" alt="Mudad" class="partner-super-logo">
 
                     </div>
 
@@ -2052,7 +2052,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/QIWA-01.png" alt="Qiwa" class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="Qiwa" class="partner-super-logo">
 
                     </div>
 
@@ -2080,7 +2080,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/GOSI-02.png" alt="GOSI" class="partner-super-logo">
+                        <img src="./asstes/img/QIWA-011.png" alt="GOSI" class="partner-super-logo">
 
                     </div>
 
